# amr-detection-yolov8

./: .dockerignore  .env.example  .gitignore  COMPLETION_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  GITHUB_READY.md  LICENSE  PROJECT_COMPLETE.txt  QUICKSTART.md  QUICK_REFERENCE.md  README.md  STRUCTURE.md  TESTING_GUIDE.md  TRANSFORMATION_SUMMARY.md  UPDATES_LOG.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  setup.py
notebooks/: AMR_detect_code.ipynb
src/: __init__.py  config.py  constants.py
src/data_labeling/: __init__.py  dataset_split.py  image_labeling.py  remove_duplicates.py  video_labeling.py
src/streaming/: __init__.py  app.py  logger.py  model.py  utils.py  webcam_stream.py
